--- a/devbox.virtualserver.conf
+++ b/devbox.virtualserver.conf
@@ -1,8 +1,8 @@
 <VirtualHost *:80>
 	ServerAdmin cheycron@gmail.com
 	ServerName DevBox
-	DocumentRoot /var/www/html/public
-	<Directory /var/www/html/public/>
+	DocumentRoot /var/www/app/public
+	<Directory /var/www/app/public/>
 		Options Indexes FollowSymLinks MultiViews
 		AllowOverride All
 		Order allow,deny
@@ -16,8 +16,8 @@
 	<VirtualHost *:443>
 		ServerAdmin cheycron@gmail.com
 		ServerName localhost
-		DocumentRoot /var/www/html/public
-		<Directory /var/www/html/public/>
+		DocumentRoot /var/www/app/public
+		<Directory /var/www/app/public/>
 			Options Indexes FollowSymLinks MultiViews
 			AllowOverride All
 			Order allow,deny
